--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_k.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_k.xml
@@ -253,7 +253,7 @@
         android:id="@+id/textView109"
         android:layout_width="103dp"
         android:layout_height="40dp"
-        android:text="殯葬服務"
+        android:text="領養區"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
