--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_e.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_e.xml
@@ -230,7 +230,7 @@
         android:id="@+id/textView32"
         android:layout_width="103dp"
         android:layout_height="40dp"
-        android:text="症狀查詢"
+        android:text="日常護理"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
